--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "lodash-es": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.5.5"
   },
   "devDependencies": {
+    "@types/lodash-es": "^4.17.5",
     "prettier": "^2.5.1"
   },
   "scripts": {
