improve obj-to-json

--- a/obj-processing/package.json
+++ b/obj-processing/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "description": "",
   "scripts": {
-    "start": "ts-node src/objToJson.ts"
+    "obj-to-json": "ts-node src/objToJson.ts",
+    "json-to-binary": "ts-node src/jsonToBinary.ts"
   },
   "keywords": [],
   "author": "",
