--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "build": "NODE_ENV=production react-scripts build",
     "build:ci": "CI=yes yarn test && yarn build",
     "build:pages": "PUBLIC_URL='/global-warming/' yarn build:ci",
-    "publish:pages": "git checkout main && yarn build:pages && git checkout gh-pages && git rm -r static assets *.html *.png *.txt *.json && mv build/* . && git add . && git commit -m \"${npm_package_version}\" && git push && git checkout main",
+    "publish:pages": "git checkout main && yarn build:pages && git checkout gh-pages && git rm -r static textures *.html *.txt *.json *.ico *.bin && mv build/* . && git add . && git commit -m \"${npm_package_version}\" && git push && git checkout main",
     "test": "yarn test:types",
     "test:types": "tsc --noEmit --project tsconfig.json"
   },
